<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="7dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/dr_search_rounded"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_url"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/text_image_url"
            android:imeOptions="actionSearch"
            android:inputType="textUri"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="0"
            android:background="@drawable/dr_clear_icon"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_hide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/text_hide"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            style="?attr/buttonBarStyle" />

        <Button
            android:id="@+id/btn_adjust"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/text_adjust"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            style="?attr/buttonBarStyle" />

    </LinearLayout>

</LinearLayout>