<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/dr_search_rounded"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@android:color/white"
            android:hint="@string/text_image_url"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorGray3"
            android:textSize="18sp"
            android:importantForAutofill="no"
            android:backgroundTint="@android:color/transparent" />

        <FrameLayout
            android:id="@+id/btn_clear_out"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_clear_24dp" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/text_cancel"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/white"
            style="?attr/buttonBarStyle" />

        <Button
            android:id="@+id/btn_hide"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/text_save"
            android:textColor="@color/colorPrimary"
            style="?attr/buttonBarStyle" />

    </LinearLayout>

</LinearLayout>